// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateAccount /> should render properly when the activation link is expired 1`] = `
.emotion-0 {
  height: 100%;
}

.emotion-1 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2e2e2e;
  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
  z-index: 100;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.emotion-3 {
  padding-left: 8px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-top: 44px;
  padding-left: 32px;
  padding-right: 32px;
  padding-bottom: 32px;
  height: calc(100vh - 44px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-8 a {
  color: #ffffff;
  background-color: #0074f5;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-8 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #005dc4;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-12 a {
  color: #ffffff;
  background-color: #3b3b3b;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-12 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #2e2e2e;
}

.emotion-13 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-14 {
  padding-top: 8px;
}

.emotion-15 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-16 {
  position: relative;
}

.emotion-17 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-17:focus,
.emotion-17 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-17:hover,
.emotion-17 .noop {
  border: 2px solid #ffffff;
}

.emotion-18 {
  padding-top: 8px;
}

.emotion-40 {
  margin: 0;
  padding-top: 32px;
  color: #b3b3b3;
}

.emotion-40 a {
  color: #3A5DFF;
}

.emotion-41 {
  padding-top: 16px;
}

.emotion-42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0;
  padding-bottom: 16px;
}

.emotion-43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-44 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-45 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-46 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-47 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
}

.emotion-48 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-49 button,
.emotion-49 a {
  margin-right: 16px;
}

.emotion-50 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-50,
.emotion-50:hover,
.emotion-50:visited,
.emotion-50 .noop {
  background-color: #808080;
}

.emotion-50:hover,
.emotion-50 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-50[aria-disabled=true],
.emotion-50 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-51 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-51,
.emotion-51:hover,
.emotion-51:visited,
.emotion-51 .noop {
  background-color: #3A5DFF;
}

.emotion-51:hover,
.emotion-51 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-51[aria-disabled=true],
.emotion-51 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <a
        aria-label="Home"
        className="emotion-3"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <svg
          data-file-name="logo.svg"
          height={20}
        />
      </a>
    </div>
    <div />
  </div>
  <div
    className="emotion-4"
  >
    <h2
      className="emotion-5"
    >
      Create an Account
    </h2>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-7"
      >
        <svg
          color="#0074f5"
          data-file-name="information.svg"
          height={20}
        />
        <div
          className="emotion-8"
          role="alert"
        >
          A confirmation link will be sent to your email. Please click to confirm before logging in.
        </div>
      </div>
    </div>
    <form
      action=""
      className="emotion-9"
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-10"
      >
        <div
          className="emotion-11"
        >
          <svg
            color="#c92300"
            data-file-name="warning.svg"
            height={20}
          />
          <div
            className="emotion-12"
            role="alert"
          >
            Confirmation link expired. Links expire after three days. Please create a new account.
          </div>
        </div>
      </div>
      <h3
        className="emotion-13"
      >
        Name
      </h3>
      <div
        className="emotion-14"
      >
        <label
          className="emotion-15"
          htmlFor="firstName"
        >
          First Name
        </label>
        <div
          className="emotion-16"
        >
          <input
            autoFocus={true}
            className="emotion-17"
            disabled={false}
            id="firstName"
            name="firstName"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-18"
        >
           
        </div>
      </div>
      <div
        className="emotion-14"
      >
        <label
          className="emotion-15"
          htmlFor="lastName"
        >
          Last Name
        </label>
        <div
          className="emotion-16"
        >
          <input
            className="emotion-17"
            disabled={false}
            id="lastName"
            name="lastName"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-18"
        >
           
        </div>
      </div>
      <div
        className="emotion-14"
      >
        <label
          className="emotion-15"
          htmlFor="email"
        >
          Email
        </label>
        <div
          className="emotion-16"
        >
          <input
            className="emotion-17"
            disabled={false}
            id="email"
            name="email"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-18"
        >
           
        </div>
      </div>
      <h3
        className="emotion-13"
      >
        Password
      </h3>
      <div
        className="emotion-14"
      >
        <label
          className="emotion-15"
          htmlFor="password"
        >
          Password
        </label>
        <div
          className="emotion-16"
        >
          <input
            className="emotion-17"
            disabled={false}
            id="password"
            name="password"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="emotion-18"
        >
           
        </div>
      </div>
      <div
        className="emotion-14"
      >
        <label
          className="emotion-15"
          htmlFor="confirmPassword"
        >
          Confirm Password
        </label>
        <div
          className="emotion-16"
        >
          <input
            className="emotion-17"
            disabled={false}
            id="confirmPassword"
            name="confirmPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="emotion-18"
        >
           
        </div>
      </div>
      <p
        className="emotion-40"
      >
        By accepting and clicking the "Continue" button you confirm
        that you have read and agree with Boon AI's 
        <a
          href="/policies/20210211/terms-of-use.pdf"
          rel="noopener noreferrer"
          target="_blank"
        >
          Terms of Use
        </a>
         and 
        <a
          href="/policies/20210211/privacy-policy.pdf"
          rel="noopener noreferrer"
          target="_blank"
        >
          Privacy Policy
        </a>
        .
      </p>
      <div
        className="emotion-41"
      >
        <label
          className="emotion-42"
        >
          <div
            className="emotion-43"
          >
            <input
              className="emotion-44"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="isChecked"
            />
            <div
              className="emotion-45"
            >
              <svg
                className="emotion-46"
                data-file-name="checkmark.svg"
                height={20}
              />
            </div>
          </div>
          <div
            className="emotion-47"
          >
            <span
              className="emotion-48"
            >
              Accept
            </span>
          </div>
        </label>
      </div>
      <div
        className="emotion-49"
      >
        <a
          className="emotion-50"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Cancel
        </a>
        <button
          aria-disabled={true}
          className="emotion-51"
          onClick={[Function]}
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<CreateAccount /> should render properly when there is a token 1`] = `null`;

exports[`<CreateAccount /> should render properly when there is no token 1`] = `
.emotion-0 {
  height: 100%;
}

.emotion-1 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2e2e2e;
  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
  z-index: 100;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.emotion-3 {
  padding-left: 8px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-top: 44px;
  padding-left: 32px;
  padding-right: 32px;
  padding-bottom: 32px;
  height: calc(100vh - 44px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-8 a {
  color: #ffffff;
  background-color: #0074f5;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-8 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #005dc4;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-10 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-11 {
  padding-top: 8px;
}

.emotion-12 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-13 {
  position: relative;
}

.emotion-14 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-14:focus,
.emotion-14 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-14:hover,
.emotion-14 .noop {
  border: 2px solid #ffffff;
}

.emotion-15 {
  padding-top: 8px;
}

.emotion-37 {
  margin: 0;
  padding-top: 32px;
  color: #b3b3b3;
}

.emotion-37 a {
  color: #3A5DFF;
}

.emotion-38 {
  padding-top: 16px;
}

.emotion-39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0;
  padding-bottom: 16px;
}

.emotion-40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-41 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-42 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-43 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
}

.emotion-45 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-46 button,
.emotion-46 a {
  margin-right: 16px;
}

.emotion-47 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-47,
.emotion-47:hover,
.emotion-47:visited,
.emotion-47 .noop {
  background-color: #808080;
}

.emotion-47:hover,
.emotion-47 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-47[aria-disabled=true],
.emotion-47 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-48 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-48,
.emotion-48:hover,
.emotion-48:visited,
.emotion-48 .noop {
  background-color: #3A5DFF;
}

.emotion-48:hover,
.emotion-48 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-48[aria-disabled=true],
.emotion-48 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <a
        aria-label="Home"
        className="emotion-3"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <svg
          data-file-name="logo.svg"
          height={20}
        />
      </a>
    </div>
    <div />
  </div>
  <div
    className="emotion-4"
  >
    <h2
      className="emotion-5"
    >
      Create an Account
    </h2>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-7"
      >
        <svg
          color="#0074f5"
          data-file-name="information.svg"
          height={20}
        />
        <div
          className="emotion-8"
          role="alert"
        >
          A confirmation link will be sent to your email. Please click to confirm before logging in.
        </div>
      </div>
    </div>
    <form
      action=""
      className="emotion-9"
      method="post"
      onSubmit={[Function]}
    >
      <h3
        className="emotion-10"
      >
        Name
      </h3>
      <div
        className="emotion-11"
      >
        <label
          className="emotion-12"
          htmlFor="firstName"
        >
          First Name
        </label>
        <div
          className="emotion-13"
        >
          <input
            autoFocus={true}
            className="emotion-14"
            disabled={false}
            id="firstName"
            name="firstName"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-15"
        >
           
        </div>
      </div>
      <div
        className="emotion-11"
      >
        <label
          className="emotion-12"
          htmlFor="lastName"
        >
          Last Name
        </label>
        <div
          className="emotion-13"
        >
          <input
            className="emotion-14"
            disabled={false}
            id="lastName"
            name="lastName"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-15"
        >
           
        </div>
      </div>
      <div
        className="emotion-11"
      >
        <label
          className="emotion-12"
          htmlFor="email"
        >
          Email
        </label>
        <div
          className="emotion-13"
        >
          <input
            className="emotion-14"
            disabled={false}
            id="email"
            name="email"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-15"
        >
           
        </div>
      </div>
      <h3
        className="emotion-10"
      >
        Password
      </h3>
      <div
        className="emotion-11"
      >
        <label
          className="emotion-12"
          htmlFor="password"
        >
          Password
        </label>
        <div
          className="emotion-13"
        >
          <input
            className="emotion-14"
            disabled={false}
            id="password"
            name="password"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="emotion-15"
        >
           
        </div>
      </div>
      <div
        className="emotion-11"
      >
        <label
          className="emotion-12"
          htmlFor="confirmPassword"
        >
          Confirm Password
        </label>
        <div
          className="emotion-13"
        >
          <input
            className="emotion-14"
            disabled={false}
            id="confirmPassword"
            name="confirmPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="emotion-15"
        >
           
        </div>
      </div>
      <p
        className="emotion-37"
      >
        By accepting and clicking the "Continue" button you confirm
        that you have read and agree with Boon AI's 
        <a
          href="/policies/20210211/terms-of-use.pdf"
          rel="noopener noreferrer"
          target="_blank"
        >
          Terms of Use
        </a>
         and 
        <a
          href="/policies/20210211/privacy-policy.pdf"
          rel="noopener noreferrer"
          target="_blank"
        >
          Privacy Policy
        </a>
        .
      </p>
      <div
        className="emotion-38"
      >
        <label
          className="emotion-39"
        >
          <div
            className="emotion-40"
          >
            <input
              className="emotion-41"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="isChecked"
            />
            <div
              className="emotion-42"
            >
              <svg
                className="emotion-43"
                data-file-name="checkmark.svg"
                height={20}
              />
            </div>
          </div>
          <div
            className="emotion-44"
          >
            <span
              className="emotion-45"
            >
              Accept
            </span>
          </div>
        </label>
      </div>
      <div
        className="emotion-46"
      >
        <a
          className="emotion-47"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Cancel
        </a>
        <button
          aria-disabled={true}
          className="emotion-48"
          onClick={[Function]}
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;
